# BasicTasks_ProcessingData

./: .gitignore  OneDrive  d
1_Input_APICall_OutputJSON_Parser/: .md  api.py  input_data.xlsx  main.py  output.xlsx  output_data.xlsx
AppsScript/: AppsScript_for_PromptingTasks.ipynb  Intro_GoogleAppsScripts.md  README.md
Crawl_Tiktok/: .env.example  .gitignore  Cuong_Tiktok2VideoDownload.py  get_API_Key.md  setup.py  tiktok_2_get_post_from_user.ipynb  tiktok_4_download_video.ipynb  tiktok_5_transcript_whisper.ipynb  tiktok_insights_extract_content.ipynb  youtube_insights_extract_content.ipynb
Crawl_Tiktok_rapidapi/: .env.example  Readme.md  test.ipynb  tiktok_insights_extract_comments.ipynb
Crawl_Youtube/: HowToRun.md  crul.md
Crawl_Youtube_rapidapi/: .env.example
LogRecords2LarkBase/: APIDoc.md  Dockerfile  (+5 more)
queryPostgreSQLDBeaver_log2Larkbase_DIFY/src/backend/: Dockerfile  Dockerfile.dev  Dockerfile.poetry  Dockerfile.requirements  Dockerfile.requirements.dev  Dockerfile.requirements.prod  Dockerfile.requirements.txt  HowRunDockerfile_AndCheck.md  app.py  id_rsa.example  pyproject.toml  requirements.txt
queryPostgreSQLDBeaver_log2Larkbase_DIFY/src/backend/api/: scripts.py
queryPostgreSQLDBeaver_log2Larkbase_DIFY/src/backend/api/scripts/: connect_PostgresSQLDBeaver.py  queryRatingToolsWorkflowMindpal_logLarkbase.py  queryRating_logExcel.py  queryRating_logLarkbase.py  utils_query.py  utils_saveQueryExcel.py  utils_saveToLarkbase.py
queryPostgreSQLDBeaver_log2Larkbase_DIFY/src/backend/api/scripts/query_results/: ratings_only.xlsx  workflow_tools.xlsx
(+151 files in other folders)
