[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A simple Flask project"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0"
flask-cors = "^3.0"
pandas = "^1.3"
requests = "^2.26"
openpyxl = "^3.0"
psycopg2-binary = "^2.9"
sshtunnel = "^0.4"
apscheduler = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"